--- a/task1/ındex.html
+++ b/task1/ındex.html
@@ -10,5 +10,6 @@
     <h1>w3 school linki yerlesdirirem</h1>
     <a href="https://www.w3schools.com/html/html_links.asp"> linkimiz</a>
     <img src="https://cdn.motor1.com/images/mgl/8e8Mo/s1/most-expensive-new-cars-ever.webp" alt="">
+    <h3>h3 yoxlaniisi</h3>
 </body>
 </html>
