--- a/task1/ındex.html
+++ b/task1/ındex.html
@@ -11,5 +11,5 @@
     <a href="https://www.w3schools.com/html/html_links.asp"> linkimiz</a>
     <img src="https://cdn.motor1.com/images/mgl/8e8Mo/s1/most-expensive-new-cars-ever.webp" alt="">
     <h3>h3 yoxlaniisi</h3>
-</body>
+</body><h3></h3>
 </html>
