--- a/div.html/index.html
+++ b/div.html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<!-- Test commit -->
   <div class="bayraq">
 <div class="goy"></div>
 <div class="qirmizi"></div>
