--- a/elaqe.html
+++ b/elaqe.html
@@ -22,5 +22,5 @@ html>
 </select><br>
 <textarea name="" id="" cols="100" rows="10"></textarea><br>
 <input type="checkbox"><span>Istifadeci sertlerini qebul edirem</span><br>
-<input type="submit"value ='Muellimatlari gonder'>
+<input type="submit"value ='Muellimatlari'>
 </html>
