--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head></head>
 
 </body>
-<!-- Test commit -->
+<!-- Indi ne elave etsen gelib dushecey  -->
+
+<!-- Bunlari arashdirarsan ki ne ishe yariyir, niye bunu eledim  -->
 
 <a href="index.html" >Ana Sehife></a>
 <a href="haqqimizda.html" >Haqqimizda></a>
