--- a/css/index.html
+++ b/css/index.html
@@ -12,10 +12,19 @@
 
 <body>
     <section class="news">
-        <div class="news-container"></div>
-             <div class="news-item">1</div>
-             <div class="news-item">2</div>
-             <div class="news-item">3</div>
+        <div class="news-container">
+            <div class="news-item">1
+            </div>
+             <div class="news-item">2
+            </div>
+             <div class="news-item">3
+            </div>
+            <div class="news-item">4
+            </div>
+            <div class="news-item">5
+            </div>
+            <div class="news-item">6
+            </div>
         </div>
     </section>
 </body>
