--- a/css/ımages/index.html
+++ b/css/ımages/index.html
@@ -13,10 +13,9 @@
 
     <div class="box-container">
         <div class="item">1</div> 
-        <div class="item">2</div> 
+        <div class="item secont">2</div> 
         <div class="item">3</div> 
         <div class="item">4</div> 
-        <div class="item">5</div> 
     </div>
 </body>
 </html>
