--- a/oxu.az/index.html
+++ b/oxu.az/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <section class="main">
+        <div class="main-nav"></div>
         <div class="container">
             <div class="featured-news-item">Manset Xeberler</div>
             <div class="news-item"></div>
