--- a/oxu.az/css/ındex.html
+++ b/oxu.az/css/ındex.html
@@ -10,18 +10,17 @@
     <link href="stylesheet" href="">
     <script src=""></script>
     <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 
     <title>Document</title>
 </head>
-
-<body>
+</body>
     <section id="top-info">
         <div class="container">
             <div class="top-info">
                 <div class="top-info-content">
-                    <span><i class="fa-solid fa-phone"></i>013456789</span>
-                    <span><i class="fa-solid fa-envolope"></i>demo@exampe.com</span>
+                    <span style="padding-right:35px; border-right:1px solid white"><i class="fa-solid fa-phone"></i>0504361054</span>
+                    <span style="padding-left:35px"><i class="fa-solid fa-envolope"></i>ashraftinayev08@gmail.com</span>
                 </div>
                 <div class="top-info-action">
                     <a href="#">Make an appointment</a>
@@ -29,4 +28,3 @@
             </div>
         </div>
     </section>
-</body>
