--- a/Project/index.html
+++ b/Project/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,52 +15,99 @@
         <div class="katigori-container">
             <div class="katigori-header">
                 <h1>Most Populer Categories</h1>
-                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget aenean accumsan bibendum gravida maecenas augue elementum et neque. Suspendisse imperdiet.</h2>
+                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget aenean accumsan<br> bibendum gravida maecenas augue elementum et neque. Suspendisse imperdiet.</h2>
             </div>
-        <div class="katigori-list">
-        <div class="katigori-item">
-            <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-1.png" alt="">
-            <span><h2>Designe Over 2.500 Courses</h2></span>
-        </div>
-        <div class="katigori-item">
-            <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-2.png" alt="">
-            <span><h2>Digital Marketer Over 5.500 courses</h2></span>
-        </div>
-        <div class="katigori-item">
-            <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-3.png" alt="">
-            <span><h2>Photography Over 2.540 Courses</h2></span>
-        </div>
-        <div class="katigori-item">
-            <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-4.png" alt="">
-            <span><h2>IT Security Over 2.750 Courses</h2></span>
-        </div>
-        <div class="katigori-item">
-            <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-5.png" alt="">
-            <span><h2>Research Over 2.150 Courses</h2></span>
-        </div>
-        <div class="katigori-item">
-            <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-6.png" alt="">
-            <span><h2>Finance Over 2.840 Courses</h2></span>
-        </div>
-        <div class="katigori-item">
-            <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-7.png" alt="">
-            <span><h2>Business Over 2.500 Courses</h2></span>
-        </div>
-        <div class="katigori-item">
-            <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-8.png" alt="">
-            <span><h2>Computer Science Over 2.540 Courses</h2></span>
-        </div>
-        <div class="katigori-item">
-            <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-9.png" alt="">
-            <span><h2>Maths & logics Over 2.540 Courses</h2></span>
-        </div>
-    </div>
-    <div class="katigori-button">
-        <button><h2>Explore More</h2></button>
-    </div>
+            <div class="katigori-list">
+                <div class="katigori-item">
+
+                    <div class="kategori-item-img">
+                        <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-1.png" alt="">
+                    </div>
+                    <div class="kategori-item-info">
+                        <h2>Desıng </h2>
+                        <h3>Over <span>2.500</span> courses</h3>
+                    </div>
+                </div>
+                <div class="katigori-item">
+                    <div class="kategori-item-img">
+                        <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-2.png" alt="">
+                    </div>
+                    <div class="kategori-item-info">
+                        <h2>Digital Marketer </h2>
+                        <h3>Over <span>5.500</span> courses</h3>
+                    </div>
+                </div>
+                <div class="katigori-item">
+                    <div class="kategori-item-img">
+                        <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-3.png" alt="">
+                    </div>
+                    <div class="kategori-item-info">
+                        <h2>Photography</h2>
+                        <h3>Over <span>2.540</span> courses</h3>
+                    </div>
+                </div>
+                <div class="katigori-item">
+                    <div class="kategori-item-img">
+                        <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-4.png" alt="">
+                    </div>
+                    <div class="kategori-item-info">
+                        <h2>IT Security</h2>
+                        <h3>Over <span>2.750</span> courses</h3>
+                    </div>
+                </div>
+                <div class="katigori-item">
+                    <div class="kategori-item-img">
+                        <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-5.png" alt="">
+                    </div>
+                    <div class="kategori-item-info">
+                        <h2>Research</h2>
+                        <h3>Over <span>2.150</span> courses</h3>
+                    </div>
+                </div>
+                <div class="katigori-item">
+                    <div class="kategori-item-img">
+                        <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-6.png" alt="">
+                    </div>
+                    <div class="kategori-item-info">
+                        <h2>Finance</h2>
+                        <h3>Over <span>2.840</span> courses</h3>
+                    </div>
+                </div>
+                <div class="katigori-item">
+                    <div class="kategori-item-img">
+                        <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-7.png" alt="">
+                    </div>
+                    <div class="kategori-item-info">
+                        <h2>Business</h2>
+                        <h3>Over <span>2.500</span> courses</h3>
+                    </div>
+                </div>
+                <div class="katigori-item">
+                    <div class="kategori-item-img">
+                        <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-8.png" alt="">
+                    </div>
+                    <div class="kategori-item-info">
+                        <h2>Computer Science</h2>
+                        <h3>Over <span>5.500</span> courses</h3>
+                    </div>
+                </div>
+                <div class="katigori-item">
+                    <div class="kategori-item-img">
+                        <img src="https://mentoring-html.dreamguystech.com/template/assets/img/categories/rec-9.png" alt="">
+                    </div>
+                    <div class="kategori-item-info">
+                        <h2>Math & logics </h2>
+                        <h3>Over <span>2.540</span> courses</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="katigori-button">
+                <button>Explore More</button>
+            </div>
 
         </div>
-    </section>  
+    </section>
 </body>
 
-</html>
+</html> 
+   
