heftelik verilen isin sonu

--- a/Project/css/css/css/index.html
+++ b/Project/css/css/css/index.html
@@ -10,18 +10,23 @@
 
 
 <body>
+
     <section class="project">
-                <div class="project-header">
+                <div class="project-info">
                     <h1>Want to share your knowledge?</h1>
-                    <h2> Join us a Mentor</h2>
-                    <div><h1>High-definition video is video of higher resolution and quality than standard-definition. While there is no standardized meaning for high-definition, generally any video.
-                    </h1></div>
+                    <h1> Join us a Mentor</h1>
+                    <div><h2>High-definition video is video of higher resolution and </h2></div>
+                    <div><h2>quality than standard-definition. While there is no </h2></div>
+                    <div><h2>standardized meaning for high-definition, generally any </h2></div>
+                    <div><h2>video.</h2></div>
                     <div class="project-button">
                     <button>Find More</button>
                     </div>
-                    <div class="news-container">
+                    <div class="news-info-header">
                         <h1>Best Courses</h1>
-                        <div><h1>Courses for all levels cover technical skills, creative techniques, business strategies, and more. We have collected all of the necessary effective study.</h1></div>
+                        <div><h2>Courses for all levels cover technical skills, creative </h2></div>
+                        <div><h2>techniques, business strategies, and more. We have </h2></div>
+                        <div><h2>collected all of the necessary effective study.</h2></div>
                         </div>
                         <div class="news-button">
                         <button>Find More</button>  
