--- a/Project/css/css/css/index.html
+++ b/Project/css/css/css/index.html
@@ -33,3 +33,8 @@
                         </div>
                         <img src="https://mentoring-html.dreamguystech.com/template/assets/img/join.png" alt="">
                         <img src="https://mentoring-html.dreamguystech.com/template/assets/img/bg-join.png" alt="">
+                    </body>
+                </body>
+            </section>
+
+                      
